--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,50 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+input{
+    @apply w-full mt-2 rounded-md border border-gray-200 focus:outline-none focus:ring focus:border-indigo-600 text-base leading-6;
+}
+
+table{
+   @apply min-w-full leading-normal;
+}
+
+table th{
+    @apply px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider;
+}
+
+table td{
+    @apply px-5 py-5 border-b border-gray-200 bg-white text-sm;
+}
+
+table p{
+    @apply text-gray-900;
+}
+
+.btn-agregar{
+    @apply px-3 py-2 bg-yellow-600 rounded-md text-white font-medium tracking-wide hover:bg-yellow-500 ml-3 hover:text-white;
+}
+
+.titulo{
+    @apply text-3xl font-semibold text-gray-700 leading-tight;
+}
+
+::-webkit-scrollbar {
+    width: 7px;
+    height: 7px;
+  }
+  
+  ::-webkit-scrollbar-track{
+    background: #2D3748;
+  }
+  
+  ::-webkit-scrollbar-thumb{
+    background: #CBD5E0;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover{
+    background: #718096;
+  }
+
