--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,7 +4,11 @@
 
 
 input{
-    @apply w-full mt-2 rounded-md border border-gray-200 focus:outline-none focus:ring focus:border-indigo-600 text-base leading-6;
+    @apply w-full py-1 px-2 rounded-md border border-gray-200 bg-white focus:outline-none focus:ring focus:border-indigo-600 text-base leading-6;
+}
+
+select{
+  @apply block w-full py-1 px-2 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring focus:border-indigo-600 text-base leading-6;
 }
 
 table{
@@ -25,6 +29,10 @@ table p{
 
 .btn-agregar{
     @apply px-3 py-2 bg-yellow-600 rounded-md text-white font-medium tracking-wide hover:bg-yellow-500 ml-3 hover:text-white;
+}
+
+.btn-buscar{
+  @apply justify-center px-3 py-1.5 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
 }
 
 .titulo{
