--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,15 +4,15 @@
 
 
 input{
-    @apply w-full py-1 px-2 rounded-md border border-gray-200 bg-white focus:outline-none focus:ring focus:border-indigo-600 text-base leading-6;
+    @apply w-full py-1 px-2 rounded-md border shadow-sm border-gray-300 bg-white focus:outline-none focus:ring focus:border-indigo-600 text-base leading-6;
 }
 
 textarea{
-  @apply block w-full py-1 px-2 rounded-md border border-gray-200 bg-white focus:outline-none focus:ring focus:border-indigo-600 text-base leading-6;
+  @apply block w-full py-1 px-2 rounded-md border shadow-sm border-gray-300 bg-white focus:outline-none focus:ring focus:border-indigo-600 text-base leading-6;
 }
 
 select{
-  @apply block w-full py-1 px-2 border border-gray-200 bg-white rounded-md focus:outline-none focus:ring focus:border-indigo-600 text-base leading-6;
+  @apply block w-full py-1 px-2 border shadow-sm border-gray-300 bg-white rounded-md focus:outline-none focus:ring focus:border-indigo-600 text-base leading-6;
 }
 
 table{
