--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -110,6 +110,30 @@ table p{
   }
 
 
+  .tooltiptext2 {
+    visibility: hidden;
+    width: 180px;
+    background-color: rgb(30, 64, 175);
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    
+    /* Position the tooltip */
+    position: absolute;
+    width: 120px;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -60px; 
+  
+  }
+
+  .to:hover .tooltiptext2 {
+    visibility: visible;
+  }
+  
+
+
 
   .btn-agVenta{
     @apply px-3 py-2 bg-blue-900 rounded-md text-white font-medium tracking-wide hover:bg-blue-500 ml-3 hover:text-white;
